--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portaureact",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nambui17.github.io/portaureact",
   "dependencies": {
     "@react-spring/parallax": "^9.6.1",
     "@react-spring/web": "^9.6.1",
@@ -20,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
